# HumanOS

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  start.sh
common/: models.py
doc_gen/: admin.py  apps.py  models.py
doc_gen/agents/: doc_gen.py  tools.py
doc_gen/migrations/: 0001_initial.py  0002_userrequesteddoc.py  0003_alter_userrequesteddoc_file.py  0004_alter_docxtemplate_name.py
doc_gen/utils/: docx.py
documents_renderer/: admin.py  apps.py  models.py
documents_renderer/migrations/: 0001_initial.py
documents_renderer/utils/: docx.py
genai/google/: client.py  context.py
humanos/: asgi.py  settings.py  urls.py  wsgi.py
humanos/scripts/: dummy_company_data.py
people/: admin.py  models.py
people/migrations/: 0001_initial.py  0002_vacationrequest.py  0003_vacationrequest_days.py  0004_personcompany_leader.py  0005_personcompany_salary.py
people/scripts/: initialize_dummy_data.py
whatsapp/: controller.py  serializers.py  urls.py  views.py
whatsapp/utils/: api.py
work_us/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
work_us/agents/: __init__.py  attorney.py  cvv.py
work_us/migrations/: 0001_initial.py  0002_candidatemodel_comments.py  0003_alter_candidatemodel_resume.py  0004_alter_candidatemodel_options_and_more.py  0005_alter_candidatemodel_vacancy.py  0005_alter_workusmodel_company.py  0006_merge_20250511_0253.py  0007_alter_backgroundpersonmodel_candidate.py  0008_alter_candidatemodel_email_and_more.py
work_us/utils/: __init__.py  files.py  qs.py
