[project]
name = "humanos"
version = "0.1.0"
description = "HumanOS Project"
requires-python = ">=3.13.1"
dependencies = [
    "asgiref==3.8.1",
    "bpython>=0.25",
    "django==5.2",
    "django-extensions>=4.1",
    "djangorestframework==3.16.0",
    "docxtpl>=0.19.1",
    "gunicorn==21.2.0",
    "psycopg2-binary==2.9.10",
    "python-dotenv>=1.1.0",
    "sqlparse==0.5.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
