[project]
name = "humanos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "ruff>=0.11.8",
    "gunicorn>=23.0.0",
    "djangorestframework>=3.16.0",
    "django-filter>=25.1",
    "django-extensions>=4.1",
    "psycopg2-binary>=2.9.10",
    "bpython>=0.25",
    "python-dotenv>=1.1.0",
    "pillow>=11.2.1",
]
