[project]
name = "humanos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "ruff>=0.11.8",
    "gunicorn>=23.0.0",
    "djangorestframework>=3.16.0",
    "django-filter>=25.1",
    "django-extensions>=4.1",
    "psycopg2-binary>=2.9.10",
    "bpython>=0.25",
    "python-dotenv>=1.1.0",
    "pillow>=11.2.1",
    "docxtpl>=0.19.1",
    "mammoth>=1.9.0",
    "google-generativeai>=0.8.5",
    "pymupdf>=1.25.5",
    "docx2pdf>=0.1.8",
    "dj-rest-auth>=7.0.1",
    "djangorestframework-simplejwt>=5.5.0",
    "django-allauth>=65.7.0",
    "django-cors-headers>=4.7.0",
    "markdown>=3.8",
    "fitz>=0.0.1.dev2",
    "werkzeug>=3.1.3",
    "playwright>=1.52.0",
]
